--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,5 @@ resolver = "2"
 [workspace.dependencies]
 anyhow = "1.0"
 tokio = {version = "1", features = ["macros"]}
-wasmtime = {version = "22.0", features = ["runtime", "component-model"]}
-wasmtime-wasi = "22.0.0"
+wasmtime = "23.0"
+wasmtime-wasi = "23.0"
